add api for changing statistics
