# website/static/swagger.json
@@ -123,7 +123,6 @@
       "put": {
         "tags": ["Users"],
         "summary": "Update user by ID",
-        "description": "",
         "operationId": "updateUser",
         "consumes": ["application/json"],
         "produces": ["application/json"],
@@ -173,6 +172,46 @@
             "description": "ID of the user to delete",
             "required": true,
             "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Successful response, no content"
+          },
+          "404": {
+            "description": "User not found"
+          }
+        }
+      }
+    },
+    "/users/{userId}/{category}/{point}": {
+      "put": {
+        "tags": ["Users"],
+        "summary": "Update user's statistics by ID",
+        "description": "",
+        "operationId": "updateStatistics",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "ID of the user to delete",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "category",
+            "in": "path",
+            "description": "number of task category",
+            "required": true,
+            "type": "integer"
+          },
+          {
+            "name": "point",
+            "in": "path",
+            "description": "point for task",
+            "required": true,
+            "type": "integer"
           }
         ],
         "responses": {
